--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-database:20.0.3'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:21.0.3'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:21.0.3'
+    implementation 'com.google.android.libraries.places:places:2.5.0'
 
 
     // Full GeoFire library for Realtime Database users
