--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:21.0.3'
     implementation 'com.google.android.libraries.places:places:2.5.0'
+    implementation 'com.github.jd-alexander:library:1.1.0'
 
 
     // Full GeoFire library for Realtime Database users
